fix: hero text not showing"

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h3 {
 }
 
 .occ {
-  /* font-size: 7.5vh; */
+  font-size: 5.5vh;
   font-family: "Monoton";
 }
 
